# email-triage-openenv

./: .dockerignore  Dockerfile  README.md  app.py  env.py  grader.py  inference.py  main.py  openenv.yaml  pyproject.toml  requirements.txt  task_generator.py  validate_openenv.py
env/: __init__.py  environment.py  models.py
server/: app.py
tasks/: __init__.py  tasks.py
