[project]
name = "email-triage-openenv"
version = "1.0.0"
description = "OpenEnv Email Triage Environment"
authors = [
    { name = "Abhilash Maguluri" }
]
requires-python = ">=3.10"

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
